--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		</style>
 	</head>
 	<body bgcolor="#151515">                                                                               <!-- В КОДЕ ТЫ НИЧЕГО ИНТЕРЕСНОГО НЕ НАЙДЁШЬ, ЧМО -->
-		<center><h1 class="green">ТАБЛИЦА ЛИДЕРОВ (23.01.2023)</h1></center>
-		<br>
+		<!--<center><h1 class="green">ТАБЛИЦА ЛИДЕРОВ (23.01.2023)</h1></center>--><center><h1 class="red">ТАБЛИЦА НЕДОСТУПНА</h1></center>
+		<!--<br>
 		<ol id="ol">
 			<li class="red">Сенсей (2xp)</li>
 			<br>
@@ -50,6 +50,6 @@
 			<li>Мугивара~я (0xp)</li>
 			<br>
 			<li>aibinliw (0xp)</li>
-		</ol>
+		</ol>-->
 	</body>
 </html>
